--- a/pictures.qrc
+++ b/pictures.qrc
@@ -10,5 +10,7 @@
         <file>picture/switch_on.png</file>
         <file>picture/serial_close.png</file>
         <file>picture/serial_open.png</file>
+        <file>picture/down_arrow.png</file>
+        <file>picture/up_arrow.png</file>
     </qresource>
 </RCC>
