--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>950</width>
+    <width>979</width>
     <height>751</height>
    </rect>
   </property>
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_19">
+   <layout class="QGridLayout" name="gridLayout_20">
     <item row="0" column="0">
      <widget class="QWidget" name="sideBar" native="true">
       <property name="layoutDirection">
@@ -25,13 +25,10 @@
 	background-color: rgb(228, 228, 228);  /* 设置背景色为灰色 */
 }</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout_8">
+      <layout class="QGridLayout" name="gridLayout_19">
        <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <property name="spacing">
-          <number>6</number>
-         </property>
-         <item>
+        <layout class="QGridLayout" name="gridLayout_8">
+         <item row="0" column="0">
           <widget class="QToolButton" name="home_tB">
            <property name="styleSheet">
             <string notr="true">/* 默认 */
@@ -80,7 +77,7 @@ QPushButton:default {
            </property>
           </widget>
          </item>
-         <item>
+         <item row="1" column="0">
           <widget class="QToolButton" name="image_process_tB">
            <property name="styleSheet">
             <string notr="true">/* 默认 */
@@ -126,7 +123,7 @@ QPushButton:default {
            </property>
           </widget>
          </item>
-         <item>
+         <item row="2" column="0">
           <widget class="QToolButton" name="log_tB">
            <property name="styleSheet">
             <string notr="true">/* 默认 */
@@ -172,7 +169,7 @@ QPushButton:default {
            </property>
           </widget>
          </item>
-         <item>
+         <item row="3" column="0">
           <widget class="QToolButton" name="tooltB">
            <property name="styleSheet">
             <string notr="true">/* 默认 */
@@ -218,7 +215,53 @@ QPushButton:default {
            </property>
           </widget>
          </item>
-         <item>
+         <item row="4" column="0">
+          <widget class="QToolButton" name="command_tB">
+           <property name="styleSheet">
+            <string notr="true">/* 默认 */
+QToolButton{   
+	border-top: 3px outset transparent;           /* 上边框宽度3像素、突出显示、颜色为透明 */
+	border-bottom: 7px outset transparent;
+	border-right: 3px outset transparent;
+	border-left: 3px outset transparent;
+    min-width: 30px;                            /* 控件最小宽度 */
+    min-height: 30px;
+	background-color: rgb(228, 228, 228);
+
+}
+
+/* 鼠标悬停 */
+QToolButton:hover{
+	background-color: rgb(205, 205, 205);
+}
+
+/* 点击和按下 */
+QToolButton:pressed,QToolButton:checked{
+	border-left: 3px outset rgb(93, 95, 97);  /* 左边框宽度3像素、突出显示、颜色为深深灰 */
+	background-color: rgb(246, 246, 246);	
+}
+
+QPushButton:default {
+    border-color: navy; /* make the default button prominent */
+}
+
+</string>
+           </property>
+           <property name="text">
+            <string>指令</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>false</bool>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
           <spacer name="verticalSpacer_4">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -226,12 +269,12 @@ QPushButton:default {
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
-             <height>40</height>
+             <height>376</height>
             </size>
            </property>
           </spacer>
          </item>
-         <item>
+         <item row="6" column="0">
           <widget class="QToolButton" name="system_setup_tB">
            <property name="styleSheet">
             <string notr="true">/* 默认 */
@@ -298,8 +341,8 @@ QPushButton:default {
               <widget class="usb_widget_image" name="usb_widget" native="true">
                <property name="minimumSize">
                 <size>
-                 <width>128</width>
-                 <height>128</height>
+                 <width>64</width>
+                 <height>64</height>
                 </size>
                </property>
                <property name="maximumSize">
@@ -343,6 +386,76 @@ QPushButton:default {
            <string/>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
+           <item row="1" column="1">
+            <widget class="QComboBox" name="camera_comboBox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0" rowspan="2">
+            <layout class="QGridLayout" name="gridLayout_15">
+             <item row="0" column="1">
+              <widget class="QGroupBox" name="groupBox_12">
+               <property name="title">
+                <string>UDP开关</string>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_14">
+                <item row="0" column="0">
+                 <widget class="QPushButton" name="udp_switchBt">
+                  <property name="minimumSize">
+                   <size>
+                    <width>40</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>40</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QGroupBox" name="groupBox_11">
+               <property name="title">
+                <string>USB开关</string>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_6">
+                <item row="0" column="0">
+                 <widget class="QPushButton" name="usb_switchBt">
+                  <property name="minimumSize">
+                   <size>
+                    <width>40</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                  <property name="maximumSize">
+                   <size>
+                    <width>40</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
+             </item>
+            </layout>
+           </item>
            <item row="0" column="1">
             <widget class="QPushButton" name="camera_det_pB">
              <property name="maximumSize">
@@ -391,80 +504,54 @@ QPushButton:disabled {
              </property>
             </widget>
            </item>
-           <item row="0" column="0" rowspan="2">
-            <layout class="QGridLayout" name="gridLayout_15">
-             <item row="0" column="0">
-              <widget class="QGroupBox" name="groupBox_11">
-               <property name="title">
-                <string>USB开关</string>
-               </property>
-               <layout class="QGridLayout" name="gridLayout_6">
-                <item row="0" column="0">
-                 <widget class="QPushButton" name="usb_switchBt">
-                  <property name="minimumSize">
-                   <size>
-                    <width>40</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>40</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QGroupBox" name="groupBox_12">
-               <property name="title">
-                <string>UDP开关</string>
-               </property>
-               <layout class="QGridLayout" name="gridLayout_14">
-                <item row="0" column="0">
-                 <widget class="QPushButton" name="udp_switchBt">
-                  <property name="minimumSize">
-                   <size>
-                    <width>40</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                  <property name="maximumSize">
-                   <size>
-                    <width>40</width>
-                    <height>40</height>
-                   </size>
-                  </property>
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </widget>
-             </item>
-            </layout>
-           </item>
-           <item row="1" column="1">
-            <widget class="QComboBox" name="camera_comboBox">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-            </widget>
-           </item>
           </layout>
          </widget>
         </item>
         <item row="2" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>事件型相机分辨率选择</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QComboBox" name="resolutioCB">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <item>
+             <property name="text">
+              <string>128*128</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>64*64</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="3" column="0">
          <widget class="QGroupBox" name="groupBox_3">
           <property name="title">
            <string>串口</string>
@@ -519,12 +606,36 @@ QPushButton:disabled {
           </layout>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="4" column="0">
          <widget class="QGroupBox" name="groupBox_8">
           <property name="title">
            <string>数据流文件保存</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
+           <item row="1" column="0">
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <item>
+              <widget class="QComboBox" name="filepath_cB">
+               <property name="maximumSize">
+                <size>
+                 <width>232</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="layoutDirection">
+                <enum>Qt::RightToLeft</enum>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QToolButton" name="path_sel_tB">
+               <property name="text">
+                <string>...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
            <item row="0" column="0">
             <layout class="QHBoxLayout" name="horizontalLayout">
              <item>
@@ -557,30 +668,6 @@ QPushButton:disabled {
              </item>
             </layout>
            </item>
-           <item row="1" column="0">
-            <layout class="QHBoxLayout" name="horizontalLayout_3">
-             <item>
-              <widget class="QComboBox" name="filepath_cB">
-               <property name="maximumSize">
-                <size>
-                 <width>232</width>
-                 <height>16777215</height>
-                </size>
-               </property>
-               <property name="layoutDirection">
-                <enum>Qt::RightToLeft</enum>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QToolButton" name="path_sel_tB">
-               <property name="text">
-                <string>...</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </item>
           </layout>
          </widget>
         </item>
@@ -593,8 +680,8 @@ QPushButton:disabled {
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>20</width>
-          <height>252</height>
+          <width>315</width>
+          <height>158</height>
          </size>
         </property>
        </spacer>
@@ -3661,7 +3748,7 @@ QDoubleSpinBox::down-button {
       <item row="1" column="0">
        <widget class="QGroupBox" name="groupBox_5">
         <property name="title">
-         <string>其他指令</string>
+         <string>时序控制</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_7">
          <item row="0" column="0" rowspan="2">
@@ -4025,20 +4112,13 @@ QLCDNumber:hover {
      </layout>
     </item>
    </layout>
-   <zorder>layoutWidget</zorder>
-   <zorder>groupBox_4</zorder>
-   <zorder>groupBox_3</zorder>
-   <zorder>groupBox_2</zorder>
-   <zorder>sideBar</zorder>
-   <zorder>groupBox_8</zorder>
-   <zorder>verticalSpacer</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>950</width>
+     <width>979</width>
      <height>22</height>
     </rect>
    </property>
